src/app/cart/cart.component.css
a {
    text-decoration: none;
    cursor: pointer;
}

.main-container {
    max-width: 56.25rem;
    /* border: 1px solid red; */
    padding: 1rem;
    margin: 0 auto;
}

.navbar {
    display: flex;
    gap: 1rem;
    align-items: center;
    justify-content: space-evenly;
    max-width: 56.25rem;
    margin: 0 auto;
    padding: 1rem;
    /* border: 1px solid red; */
}


.colored-bar {
    background-color: rgb(34, 139, 34, 0.3);
    width: 100%;
}

.navbar a {
    color: dimgray;
    border-radius: 10px;
    padding: 1rem;
    font-size: 1.25rem;
}

.navbar-firsthalf, .navbar-secondhalf {
    display: flex;
    justify-content: space-evenly;
    gap: 1rem;
}

.navbar-firsthalf, .navbar-secondhalf{
    flex: 1;
}


.navbar a:hover {
    background-color: forestgreen;
    color: white;
}

.header-text-image-container {
    display: flex;
    justify-content: center;
    /* border: 1px solid red; */
    gap: 1rem;
    flex: 1;
}

.header-text h2 {
    margin-top: -1.563rem;
}

.checkout-btn {
    border-radius: 3rem;
    background-color: forestgreen;
    color: white;
    display: flex;
    gap: 0.625rem;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.checkout-btn:hover {
    background-color: green;
}

.checkout-btn p {
    font-size: 1.25rem;
    -webkit-user-select: none;
    -webkit-touch-callout: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.header-image-container img {
    width: 30rem;
    height: auto;
}

.cart-container {
    display: flex;
    gap: 1rem;
    flex-wrap: wrap;
}

.cart-item {
    padding: 1rem;
    background-color: whitesmoke;
    border-radius: 1.25rem;
    flex-grow: 1;
    display: flex;
    align-items: center;
    gap: 1rem;
    height: 100%;
}

.cart-item:hover {
    background-color: lightgray;
}

.cart-item p {
    padding-bottom: 0;
}

.cart-item-img img {
    mix-blend-mode: multiply;
}

.cart-btn {
    width: 2rem;
    height: 2rem;
}

.cart-item-quantity, .cart-crement-buttons {
    display: flex;
    justify-content: space-between;
}

.cart-item-half {
    flex-grow: 1;
}

.cart-item-half p {
    margin: 0;
}

.cart-quantity-crement {
    display: flex;
    gap: 1rem;
}

.cart-crement-buttons {
    margin-top: 2.5rem;
    cursor: pointer;
}

.cart-item-name p {
    width: 13rem;
}

.emptymessage-container {
    margin: 0 auto;
    text-align: center;
    border: 1.5px solid rgb(0,191,255);
    background-color: rgb(0,191,255, 0.1);
    padding: 1rem;
    border-radius: 1.25rem;
    color: dimgray;
}

.emptymessage-container p:last-of-type {
   margin-top: -20px;
}

.header {
    font-size: 1.25rem;
    font-weight: 600;
}

.store-name {
    display: flex;
    align-items: center;
    gap: 10px;
}

.store-name span {
    font-size: 32px;
}

@media (max-width: 46.875rem) { 
    .navbar, .header-text-image-container {
        display: flex;
        flex-direction: column;
    }

    .header-image {
        display: none;
    }

    .cart-crement-buttons {
        margin-top: 1rem;
    }

    .cart-item p {
        width: 100%;
    }
  }

